# asr

./: README.md
document/: 20180802服务端工作进度.md  README.md  json协议定义.md  webclient  熊斌，张业勤调研结果  白泽琛关于服务框架调研结果.md  科大讯飞语音识别API.md  网络服务框架调研结果.md  语音实时转写.md  语音实时转写Resful协议.md
src/: Makefile.am  Makefile.in  collect.mk  common.mk  config.h  config.h.in  config.h.in~  config.status  configure  configure.ac  curl.sh  libtool  start.sh
src/Worker/: Makefile.am  base64.cpp  base64.h  config_map.hpp  configuration.cpp  configuration.hpp  http.cpp  http.h  http_server.cpp  http_server.hpp  linked_list.hpp  main.cpp  output_package.cpp  output_package.h  request_type.cpp  request_type.h  service_log.hpp  socket_handle.hpp  task_base.cpp  task_base.hpp  util_common.cpp  util_common.h  wait_list.hpp  worker.hpp  worker_loader.cpp  worker_loader.h  worker_store.cpp  worker_store.h
src/Worker/.deps/: base64.Po  configuration.Po  http.Po  http_server.Po  main.Po  output_package.Po  request_type.Po  task_base.Po  util_common.Po  worker_loader.Po  worker_store.Po
src/autom4te.cache/: output.1  output.2  output.3  output.4  requests  traces.0  traces.1  traces.2  traces.3  traces.4
src/common/: Makefile.am
src/common/json/: Makefile.am  json.cpp  json.h
src/common/json/.deps/: json.Plo
src/conf/: worker.cfg
